<resources>
    <string name="app_name">StudentGuidance</string>
    <string name="OpenDrawer">Open Drawer</string>
    <string name="CloseDrawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homeSting">Discover\nLearn with Ease\nNavigate
</string>
    <string name="navigation">Navigation</string>
    <string name="facultyInfo">Faculty Info</string>
    <string name="choosestart">choose start location</string>
    <string name="choosedestiny">choose destination</string>
    <string name="details">Details</string>
    <string name="name">Name</string>
    <string name="designation">Designation</string>
    <string name="department">Department</string>
    <string name="cabinNum">Cabin Number</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="successful">Successful</string>
    <string name="done">Done</string>
    <string name="update">Update</string>
    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="department_xyz">Department: XYZ</string>
    <string name="designation_xyz">Designation: XYZ</string>
    <string name="cabin_no_xyz">Cabin No: XYZ</string>
    <string name="email_xyzabcf_gmail_com">Email: xyzabcf@gmail.com</string>
    <string name="search_here">Search here</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="contact_us">Contact Us</string>
    <string name="mailid">crevolution56477@gmail.com</string>
    <string name="ask_question">Ask Question</string>
    <string name="response">Response:</string>
</resources>