<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddFacultyInfoFragment"
    android:background="@color/fragmentHomeBgColor"
    android:id="@+id/scrollViewAddFaculty">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/facultyImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/person_image"
            android:layout_marginTop="30dp"
            android:elevation="60dp"
            android:layout_centerHorizontal="true"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/facultyInfo"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-40dp"
            android:layout_below="@+id/facultyImage"
            android:orientation="vertical"
            android:background="@drawable/addfacultyinfobackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_24"
                android:layout_marginTop="@dimen/dim_24"
                android:layout_marginBottom="@dimen/dim_16"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/details"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_23"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nameET"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="@dimen/dim_24"
                android:layout_marginEnd="@dimen/dim_24"
                android:layout_marginBottom="@dimen/dim_24"
                android:background="@drawable/edittextbackground2"
                android:hint="@string/name"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:textColor="@color/black"
                android:textColorHint="#80000000" />

            <EditText
                android:id="@+id/designationET"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="@dimen/dim_24"
                android:layout_marginEnd="@dimen/dim_24"
                android:layout_marginBottom="@dimen/dim_24"
                android:background="@drawable/edittextbackground2"
                android:hint="@string/designation"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:textColor="@color/black"
                android:textColorHint="#80000000" />

            <EditText
                android:id="@+id/departmentET"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="@dimen/dim_24"
                android:layout_marginEnd="@dimen/dim_24"
                android:layout_marginBottom="@dimen/dim_24"
                android:background="@drawable/edittextbackground2"
                android:hint="@string/department"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:textColor="@color/black"
                android:textColorHint="#80000000" />

            <EditText
                android:id="@+id/cabinNumberET"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="@dimen/dim_24"
                android:layout_marginEnd="@dimen/dim_24"
                android:layout_marginBottom="@dimen/dim_24"
                android:background="@drawable/edittextbackground2"
                android:hint="@string/cabinNum"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:textColor="@color/black"
                android:textColorHint="#80000000" />

            <EditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="@dimen/dim_24"
                android:layout_marginEnd="@dimen/dim_24"
                android:layout_marginBottom="@dimen/dim_54"
                android:background="@drawable/edittextbackground2"
                android:hint="@string/email"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:textColor="@color/black"
                android:textColorHint="#80000000" />

        </LinearLayout>

        <Button
            android:id="@+id/submitBtnClose"
            android:layout_width="180dp"
            android:layout_height="72dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:fontFamily="@font/lexend_deca"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:backgroundTint="#004E65"
            android:layout_marginTop="-36dp"
            android:layout_marginBottom="100dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/linearLayout"/>
    </RelativeLayout>


</ScrollView>