<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/fragmentHomeBgColor"
    tools:context=".fragments.ShowFacultyInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="36dp"
        android:gravity="center">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circularImageView"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginBottom="-60dp"
            android:elevation="20dp"
            android:src="@drawable/person_image"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="24dp"
            android:paddingBottom="80dp"
            android:background="@drawable/addfacultyinfobackground">
            <TextView
                android:id="@+id/nameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:text="@string/name"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#004E65"
                android:fontFamily="@font/lexend_deca"/>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="20dp"
                android:layout_margin="20dp"
                app:cardBackgroundColor="@color/white">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingTop="46dp"
                    android:paddingBottom="46dp">
                    <TextView
                        android:id="@+id/departmentTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/department_xyz"
                        android:textSize="20sp"
                        android:textColor="#CC000000"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="@font/lexend_deca"/>
                    <TextView
                        android:id="@+id/designationTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/designation_xyz"
                        android:textSize="20sp"
                        android:textColor="#CC000000"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="@font/lexend_deca"/>
                    <TextView
                        android:id="@+id/cabinNoTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cabin_no_xyz"
                        android:textSize="20sp"
                        android:textColor="#CC000000"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="@font/lexend_deca"/>
                    <TextView
                        android:id="@+id/emailTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email_xyzabcf_gmail_com"
                        android:textSize="20sp"
                        android:textColor="#CC000000"
                        android:fontFamily="@font/lexend_deca"/>


                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </LinearLayout>



</ScrollView>