<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragmentHomeBgColor"
    tools:context=".fragments.LoginFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        android:elevation="20dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/white"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="40dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:background="@color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="36sp"
                android:layout_marginBottom="34dp"
                android:fontFamily="@font/lexend_deca"
                android:textColor="#004E65"/>
            <EditText
                android:id="@+id/usernameET"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:ems="12"
                android:hint="@string/username"
                android:textColorHint="#8F000000"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_marginBottom="20dp"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="10dp"
                android:background="@drawable/edittextbackground3"/>
            <EditText
                android:id="@+id/passwordET"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:ems="12"
                android:hint="@string/password"
                android:textColorHint="#8F000000"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_marginBottom="28dp"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="10dp"
                android:background="@drawable/edittextbackground3"/>
            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:backgroundTint="#004E65"
                android:text="@string/login"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/white"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>



</ScrollView>