<?xml version="1.0" encoding="utf-8"?>
<ScrollView
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="100dp"
    android:background="@color/fragmentHomeBgColor"
    tools:context=".fragments.HomeFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/lexend_deca"
            android:text="@string/homeSting"
            android:textColor="#fff"
            android:textSize="@dimen/font_size_30"
            android:textStyle="bold" />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="@dimen/dim_24"
            android:layout_marginTop="@dimen/dim_36"
            android:layout_marginEnd="@dimen/dim_24"
            app:cardBackgroundColor="#D9D9D9"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp">
            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/imageSlider"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:iss_auto_cycle="true"
                app:iss_corner_radius="20"
                app:iss_delay="1000"
                app:iss_period="500"
                app:iss_title_background="@drawable/gradient" />
        </androidx.cardview.widget.CardView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_24"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="@dimen/dim_24">
            <androidx.cardview.widget.CardView
                android:id="@+id/navigationCardView"
                android:layout_width="@dimen/dim_150"
                android:layout_height="@dimen/dim_150"
                android:layout_alignParentStart="true"
                app:cardCornerRadius="20dp"
                android:backgroundTint="@color/cardItemColor"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:focusable="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="@dimen/dim_80"
                        android:layout_height="@dimen/dim_80"
                        android:src="@drawable/navigation_icon"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/navigation"
                        android:fontFamily="@font/lexend_deca"
                        android:textColor="#020000"
                        android:textStyle="bold"
                        android:textSize="@dimen/font_size_14"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/facultyInfoCardView"
                android:layout_width="@dimen/dim_150"
                android:layout_height="@dimen/dim_150"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/cardItemColor"
                app:cardCornerRadius="20dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:focusable="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="@dimen/dim_80"
                        android:layout_height="@dimen/dim_80"
                        android:src="@drawable/faculty_icon"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/facultyInfo"
                        android:fontFamily="@font/lexend_deca"
                        android:textColor="#020000"
                        android:textStyle="bold"
                        android:textSize="@dimen/font_size_14"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>

